--- a/Modules/settings.json
+++ b/Modules/settings.json
@@ -1,12 +1,13 @@
 {
   "username": "API_Server",
   "password": "ParolaExtremDeSecreta",
-  "database": "Magazin_Tehnic",
+  "database": "Hotel",
   "server": "MariusPC\\SQLEXPRESS",
   "ssl_context": {
     "cert": "SSL_Certificates/cert.pem",
     "key": "SSL_Certificates/key.pem"
   },
   "jwt_secret_key": "Cheie_Secreta",
-  "allowed_terms": ["query","sql", "test", "sql query","TESTSQL"]
+  "allowed_terms": ["query","sql", "test", "sql query","TESTSQL"],
+  "static_frontend_folder":"E:/Programare/Anul_4/Programarea_Avansata/Laborator2/User_Side/dist/User_Side/browser"
 }
